logout with blacklisted token  table

--- a/.env
+++ b/.env
@@ -4,7 +4,11 @@ DB_User = "postgres"
 DB_Password = "6280912015"
 Dbname = "Spotify_db"
 
+Jwt_key  ="secret"
+
 
 Razorpay_Key="Qi5HgPzuGUeKjQMOyiTUGjs8"
 
-TWILIO_AUTH_TOKEN =f11a8f4a486ca5d085aae5fd3a75063c
+TWILIO_AUTH_TOKEN =892b82664505cd319461c4efdb3f0e82
+
+
